# FrogPhotoID

./: README.md
source/Linux/: .cproject  .project
source/Linux/Debug/: frogmatcher  matchReport.txt  objects.mk
source/Linux/Debug/src/: frogmatcher.d  subdir.mk
source/Linux/Release/: Thumbs.db  frogmatcher  makefile  matchReport.txt  objects.mk
source/Linux/Release/src/: subdir.mk
source/Linux/src/: CMakeLists.txt  frogmatcher.cpp  frogmatcher.h
source/Windows/frogmatcher/: FrogMatcher.sln
source/Windows/frogmatcher/FrogMatcher/: FrogMatcher-oops.h  FrogMatcher.cpp  FrogMatcher.h  FrogMatcher.vcxproj  FrogMatcher.vcxproj.filters  ReadMe.txt  stdafx.cpp
source/Windows/frogmatcher/FrogMatcher/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  FrogMatcher.lastbuildstate  FrogMatcher.pch  FrogMatcher_manifest.rc  cl.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
source/Windows/frogmatcher/FrogMatcher/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  FrogMatcher.pch  cl.command.1.tlog  frogmatcher.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/Windows/frogmatcher/ipch/frogmatcher-289247cb/: frogmatcher-c64c6f6.ipch
source/Windows/frogmatcher/x64/Release/: matchReport.html  matchReport.txt  matchReport_CPU.txt  matchReport_GPU.txt  report-050914.html
source/Windows/frogmatcher/x64/Release/includes/: layout.css
